chore: update tsconfig with path aliases and refactor imports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,9 +30,9 @@
     ],
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "src/*"
-      ]
+      "@/*": ["src/*"],
+      "@/app/*": ["src/app/*"],
+      "@/components/*": ["src/app/components/*"]
     }
   },
   "include": [
